Bugs 924767 & 924583: Increase contrast on text and links
Fix Bug 924767 - text contrast
Bug 924583 - link contrast
Fix Bug 1306286 - homepage contrast

Subtle increase to contrast of body text since we were already meeting WCAG guidelines here.

Less subtle increase to link colour. Still don't met WCAG guidelines but significant improvement, especially on non-white backgrounds.

Homepage contrast issues should be fixed by combination of text contrast changes and changing colour of callout background.

--- a/kuma/static/styles/base/elements/typography.styl
+++ b/kuma/static/styles/base/elements/typography.styl
@@ -17,6 +17,7 @@ h1, h2, h3, h4 {
     font-family: $heading-font-family;
     font-weight: $light-font-weight;
     line-height: 1;
+    color: $heading-color;
     {$selector-heading-font-fallback} {
         font-family: $heading-font-family-fallback;
         letter-spacing: -0.04em;
@@ -205,4 +206,3 @@ kbd {
 var {
     font-style: italic;
 }
-
