--- a/kuma/static/styles/components/home/home-masthead.styl
+++ b/kuma/static/styles/components/home/home-masthead.styl
@@ -6,7 +6,6 @@ homepage masthead (search, feature callouts)
     padding: $first-content-top-padding 0;
 
     h1 {
-        color: $blue-background-text-color;
         margin: 0 auto;
         width: 60%;
 
@@ -14,6 +13,10 @@ homepage masthead (search, feature callouts)
             bidi-style(padding-left, 20%, padding-right, 0);
             display: block;
         }
+    }
+
+    h1, h2, h3 {
+        color: $blue-background-text-color;
     }
 }
 
