--- a/kuma/static/styles/components/wiki/communitybox.styl
+++ b/kuma/static/styles/components/wiki/communitybox.styl
@@ -17,7 +17,7 @@ $communitybox-spacing = 13px;
     & a:hover,
     & a:focus,
     & a:visited {
-        color: #fff;
+        color: $blue-background-text-color;;
     }
 
     strong {
@@ -32,6 +32,11 @@ $communitybox-spacing = 13px;
 
     h2 {
         margin-bottom: 0;
+        color: $blue-background-text-color;
+    }
+
+    h3 {
+        color: $blue-background-text-color;
     }
 }
 
